# cex-4337

./: .gitignore  Cargo.toml  implementation.md
foundry/: deployAccountFactory.sh  deployEntryPoint.sh  deploySimpleAccount.sh  foundry.toml  remappings.txt
foundry/cache/: solidity-files-cache.json
foundry/contracts/core/: EntryPoint.sol
src/: counter.rs  main.rs  simple_account.rs
