[package]
name = "erc-4337"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12.6",features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
tokio = { version = "1.44.1", features = ["full"] }
eyre = { version = "0.6.12", features = ["default"] }
